Refactor JVM arguments in build.gradle files, update security version handling in UserPreferences and fix searching bug in ManagerController.